# ghrender

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md
include/glad/: glad.c  glad.h
src/: Main.cpp
src/Core/: Application.cpp  Application.h  Core.h  Input.h  KeyCodes.h  MouseCodes.h  Window.cpp  Window.h
src/Error/: ghassert.cpp  ghassert.h  ghassert.hpp
src/Events/: Event.h  KeyboardEvents.h  MouseEvents.h  WindowEvents.h
src/OpenGL/: OpenGL_Shader.cpp  OpenGL_Shader.h  OpenGL_VertexArray.cpp  OpenGL_VertexArray.h  OpenGL_VertexBuffer.cpp  OpenGL_VertexBuffer.h
src/OpenGL/Shaders/: MeshFragment.frag  MeshVertex.vert
src/Platform/Windows/: Win32Input.cpp  Win32Window.cpp  Win32Window.h  WinWindow.cpp  WinWindow.h
tests/: Tests.cpp
